RESOLVED FIXED47033
[GTK] REGRESSION: FreeType backend does not respect XSettings font settings after r68558
https://bugs.webkit.org/show_bug.cgi?id=47033
Summary [GTK] REGRESSION: FreeType backend does not respect XSettings font settings a...
Martin Robinson
Reported 2010-10-01 17:39:58 PDT
It appears that when subpixel smoothing is turned on in XSettings configuration and FontConfig has no preference, grayscale anti-aliasing is still used. Regression tests did not catch this bug, because previously all pixel tests used grayscale XSettings.
Attachments
Patch for this issue (20.05 KB, patch)
2010-10-01 17:55 PDT, Martin Robinson
no flags
Patch updated to ToT (18.83 KB, patch)
2010-10-07 12:31 PDT, Martin Robinson
no flags
Patch with updated comments (19.05 KB, patch)
2010-10-14 11:12 PDT, Martin Robinson
zecke: review+
Martin Robinson
Comment 1 2010-10-01 17:55:16 PDT
Created attachment 69550 [details] Patch for this issue
Martin Robinson
Comment 2 2010-10-07 12:31:20 PDT
Created attachment 70129 [details] Patch updated to ToT
Holger Freyther
Comment 3 2010-10-14 10:46:40 PDT
Comment on attachment 70129 [details] Patch updated to ToT View in context: https://bugs.webkit.org/attachment.cgi?id=70129&action=review The patch looks fine, I have just one minor comment. > WebCore/ChangeLog:11 > + override the setting if it was previously off. Why is that the case? What would happen if we turn it on again? > WebCore/platform/graphics/cairo/FontPlatformDataFreeType.cpp:93 > + cairo_font_options_set_antialias(options, CAIRO_ANTIALIAS_GRAY); The else if comes a bit unexpected. Could you move the comment to the top?
Martin Robinson
Comment 4 2010-10-14 11:12:58 PDT
Created attachment 70753 [details] Patch with updated comments
Holger Freyther
Comment 5 2010-10-14 11:28:48 PDT
Comment on attachment 70753 [details] Patch with updated comments Looks good.
Martin Robinson
Comment 6 2010-10-14 11:53:13 PDT
Note You need to log in before you can comment on or make changes to this bug.