2010-10-01  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Holger Freyther.

        [GTK] REGRESSION: FreeType backend does not respect XSettings font settings after r68558
        https://bugs.webkit.org/show_bug.cgi?id=47033

        Added a platform-specific test which verifies that if XSettings
        specifies subpixel aliasing, it is the default rendering style.

        * platform/gtk/fonts/xsettings_antialias_settings-expected.checksum: Added.
        * platform/gtk/fonts/xsettings_antialias_settings-expected.png: Added.
        * platform/gtk/fonts/xsettings_antialias_settings-expected.txt: Added.
        * platform/gtk/fonts/xsettings_antialias_settings.html: Added.
2010-10-01  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Holger Freyther.

        [GTK] REGRESSION: FreeType backend does not respect XSettings font settings after r68558
        https://bugs.webkit.org/show_bug.cgi?id=47033

        Fix logic that merges XSettings defaults and FontConfig settings. If
        FontConfig or XSettings specifies a subpixel order, we force subpixel
        anti-aliasing on. If anti-aliasing is turned on explicitly, only
        override the setting if it was previously off, otherwise we ignore
        the user's preference for subpixel or gray antialiasing.

        Test: platform/gtk/fonts/xsettings_antialias_settings.html

        * platform/graphics/cairo/FontPlatformDataFreeType.cpp:
        (WebCore::setCairoFontOptionsFromFontConfigPattern): Fix merging of XSettings
        and FontConfig anti-aliasing settings.
        (WebCore::getDefaultFontOptions): Added this helper.
        (WebCore::FontPlatformData::FontPlatformData): Use the getDefaultFontOptions helper.
2010-10-01  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Holger Freyther.

        [GTK] REGRESSION: FreeType backend does not respect XSettings font settings after r68558
        https://bugs.webkit.org/show_bug.cgi?id=47033

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (initializeGtkFontSettings): Added this method which initializes XSettings
        font settings to consistent values before running a test. For the one test
        in which we need subpixel aliasing turned on, do that.
        (initializeFonts): Accepts a testURL parameter now and delegates to initializeGtkFontSettings.
        (runTest): Pass the testURL to initializeFonts.

Canonical link: https://commits.webkit.org/60373@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69786 268f45cc-cd09-0410-ab3c-d52691b4dbfc